# AzurePath

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_EN.md  biome.json  check_vite.ps1  index.html  package-lock.json  package.json  serve.ts  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json  updater.key.pub
src-tauri/capabilities/: default.json
src-tauri/examples/: db_check.rs  mysql_test.rs  session_store_test.rs  ssh_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: api_test.rs  app_settings.rs  backup.rs  bandwidth.rs  bookmark.rs  chat.rs  clipboard.rs  discovery.rs  dns.rs  export.rs  export_data.rs  file_transfer.rs  history.rs  http_check.rs  lan.rs  logs.rs  mac_lookup.rs  mdns.rs  mod.rs  monitor.rs  mtr.rs  network_sniffer.rs  operation_history.rs  ping.rs  port_scan.rs  preset.rs  remote_desktop.rs  remote_shell.rs  report.rs  settings.rs  snmp.rs  speedtest.rs  ssh.rs  ssl_check.rs  subnet.rs  system_info.rs  target_group.rs  topology.rs  traceroute.rs  whois.rs  (+1 more)
src-tauri/src/core/: bookmark.rs  cancel.rs  log_buffer.rs  mac_lookup.rs  mod.rs  settings.rs  utils.rs
src-tauri/src/core/api_test/: codegen.rs  env.rs  mod.rs  ws.rs
src-tauri/src/core/app_settings/: mod.rs  store.rs
src-tauri/src/core/bandwidth/: mod.rs
src-tauri/src/core/chat/: mod.rs  store.rs
src-tauri/src/core/clipboard/: mod.rs  monitor.rs  store.rs
src-tauri/src/core/connection/: mod.rs  protocol.rs
src-tauri/src/core/discovery/: mod.rs  peer_table.rs
src-tauri/src/core/dns/: mod.rs
src-tauri/src/core/file_server/: mod.rs
src-tauri/src/core/file_transfer/: mod.rs  receiver.rs  sender.rs
src-tauri/src/core/history/: mod.rs  store.rs
src-tauri/src/core/http_check/: mod.rs
src-tauri/src/core/mdns/: mod.rs
src-tauri/src/core/monitor/: mod.rs
src-tauri/src/core/mtr/: mod.rs
src-tauri/src/core/network_sniffer/: banner.rs  discovery.rs  fingerprint.rs  mod.rs  os_detect.rs  port_scanner.rs
src-tauri/src/core/operation_history/: mod.rs  store.rs
src-tauri/src/core/ping/: icmp.rs  mod.rs
src-tauri/src/core/port_scan/: mod.rs  tcp_connect.rs
src-tauri/src/core/preset/: mod.rs
src-tauri/src/core/remote_desktop/: desktop_client.rs  frame_encoder.rs  mod.rs  rdp.rs  session_store.rs  vnc.rs
src-tauri/src/core/remote_shell/: mod.rs  session_store.rs  ssh.rs  telnet.rs
src-tauri/src/core/snmp/: collector.rs  mod.rs  oids.rs  (+2 more)
src-tauri/src/types/: activity.rs  api_test.rs  app_settings.rs  bandwidth.rs  chat.rs  clipboard.rs  discovery.rs  dns.rs  file_transfer.rs  http_check.rs  mdns.rs  mod.rs  monitor.rs  mtr.rs  network_sniffer.rs  operation_history.rs  ping.rs  port_scan.rs  preset.rs  snmp.rs  speedtest.rs  ssh.rs  ssl_check.rs  subnet.rs  topology.rs  traceroute.rs  whois.rs  wol.rs
(+201 files in other folders)
