[package]
name = "azurepath"
version = "0.1.0"
edition = "2021"

[lib]
name = "azurepath_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "net", "io-util", "process", "fs", "signal", "time"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
regex = "1"
encoding_rs = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
thiserror = "2"
ssh2 = "0.9"
base64 = "0.22"
redis = { version = "0.27", features = ["tokio-comp"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "postgres"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
# RDP
ironrdp = { version = "0.14", features = ["connector", "session", "graphics", "input", "pdu"] }
ironrdp-blocking = "0.8"
tokio-rustls = "0.26"
sspi = { version = "0.18", features = ["network_client"] }
x509-cert = "0.2"
des = "0.8"
cipher = "0.4"
local-ip-address = "0.6"
snmp2 = { version = "0.5", default-features = false, features = ["tokio"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
